external-crates/move/crates/move-compiler/tests/move_2024/parser/use_fun_multi.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/use_fun_multi.move:2:20
  │
2 │     use fun foo as (u64, bool).foo;
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected a type name with no type arguments
